--- a/Phone/main/res/values/integers.xml
+++ b/Phone/main/res/values/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="MAX_INPUT_LINES">1</integer>
+    <integer name="ZERO">0</integer>
 </resources>
