--- a/Phone/main/res/layout/account_info_two.xml
+++ b/Phone/main/res/layout/account_info_two.xml
@@ -3,7 +3,11 @@
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/gradient_bg" >
+        android:background="@drawable/gradient_bg"             
+        android:paddingBottom="@dimen/CONTENT_PADDING"
+        android:paddingLeft="@dimen/CONTENT_PADDING"
+        android:paddingRight="@dimen/CONTENT_PADDING"
+        android:paddingTop="@dimen/CONTENT_PADDING">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -65,7 +69,11 @@
                 android:ems="16"
                 android:imeOptions="actionNext"
                 android:maxLength="16"
-                android:paddingTop="8dp" />
+                android:maxLines="@integer/MAX_INPUT_LINES"
+                android:paddingTop="8dp"> 
+                        
+                 <requestFocus />
+                </EditText>
             
             <TextView
                 android:id="@+id/account_info_two_id_strength_label"
@@ -77,7 +85,7 @@
                 android:textColor="@color/black" />
             
             <View
-                android:id="@+id/strength_bar_one"
+                android:id="@+id/account_info_two_uid_bar_one"
                 android:layout_width="32dp"
                 android:layout_height="4dp"
                 android:layout_marginTop="8dp"
@@ -87,22 +95,32 @@
                 android:background="@android:color/darker_gray" />
             
             <View
-                android:id="@+id/strength_bar_two"
+                android:id="@+id/account_info_two_uid_bar_two"
                 android:layout_width="32dp"
                 android:layout_height="4dp"
-                android:layout_alignTop="@+id/strength_bar_one"
+                android:layout_alignTop="@+id/account_info_two_uid_bar_one"
                 android:layout_marginLeft="8dp"
-                android:layout_toRightOf="@+id/strength_bar_one"
+                android:layout_toRightOf="@+id/account_info_two_uid_bar_one"
                 android:background="@android:color/darker_gray" />
             
             <View
-                android:id="@+id/strength_bar_three"
-                android:layout_alignTop="@+id/strength_bar_one"
+                android:id="@+id/account_info_two_uid_bar_three"
+                android:layout_alignTop="@+id/account_info_two_uid_bar_one"
                 android:layout_width="32dp"
                 android:layout_height="4dp"
                 android:layout_marginLeft="8dp"
-                android:layout_toRightOf="@+id/strength_bar_two"
+                android:layout_toRightOf="@+id/account_info_two_uid_bar_two"
                 android:background="@android:color/darker_gray" />
+            
+            <TextView
+                android:id="@+id/account_info_two_uid_strength_bar_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/account_info_two_uid_bar_one"
+                android:layout_below="@+id/account_info_two_uid_bar_one" 
+                android:text="@string/EMPTY"
+				android:textColor="@color/black"
+				/>
 
             <TextView
                 android:id="@+id/account_info_two_confirm_id_label"
@@ -112,7 +130,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/account_info_two_confirm_id_text"
                 android:textColor="@color/black" />
-            
+
             <EditText
                 android:id="@+id/account_info_two_confirm_id_field"
                 android:layout_width="wrap_content"
@@ -122,6 +140,7 @@
                 android:ems="16"
                 android:imeOptions="actionNext"
                 android:maxLength="16"
+                android:maxLines="@integer/MAX_INPUT_LINES"
                 android:paddingTop="8dp" />
 
             <TextView
@@ -164,6 +183,45 @@
                 android:text="@string/account_info_two_pass_strength_text"
                 android:textColor="@color/black" />
 
+            <View
+                android:id="@+id/account_info_two_pass_bar_one"
+                android:layout_width="32dp"
+                android:layout_height="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="32dp"
+                android:layout_below="@+id/account_info_two_pass_field"
+                android:layout_toRightOf="@+id/account_info_two_pass_strength_label"
+                android:background="@android:color/darker_gray" />
+            
+            <View
+                android:id="@+id/account_info_two_pass_bar_two"
+                android:layout_width="32dp"
+                android:layout_height="4dp"
+                android:layout_alignTop="@+id/account_info_two_pass_bar_one"
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@+id/account_info_two_pass_bar_one"
+                android:background="@android:color/darker_gray" />
+            
+            <View
+                android:id="@+id/account_info_two_pass_bar_three"
+                android:layout_alignTop="@+id/account_info_two_pass_bar_one"
+                android:layout_width="32dp"
+                android:layout_height="4dp"
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@+id/account_info_two_pass_bar_two"
+                android:background="@android:color/darker_gray" />
+            
+            <TextView
+                android:id="@+id/account_info_two_pass_strength_bar_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/account_info_two_pass_bar_one"
+                android:layout_below="@+id/account_info_two_pass_bar_one" 
+                android:text="@string/EMPTY"
+				android:textColor="@color/black"
+				/>
+            
+            
             <TextView
                 android:id="@+id/account_info_two_pass_confirm_label"
                 android:layout_width="wrap_content"
@@ -263,17 +321,7 @@
                 android:text="@string/need_help_number_text"
                 android:textColor="@color/blue" />
         </TableRow>
-
-            <TextView
-                android:id="@+id/strength_bar_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/strength_bar_one"
-                android:layout_below="@+id/strength_bar_one" 
-                android:text="@string/strength_bar_text"
-				android:textColor="@color/black"
-				/>
-
+        
         </RelativeLayout>
 
     </ScrollView>
