--- a/Phone/main/res/layout/account_info.xml
+++ b/Phone/main/res/layout/account_info.xml
@@ -224,7 +224,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp" >
 
-            <TextView
+            <Button
                 android:id="@+id/account_info_cancel_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
