--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -132,21 +132,23 @@
                 android:id="@+id/button1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".4"
+                android:layout_weight=".195"
                 android:clickable="false"
                 android:longClickable="false"
                 android:visibility="invisible"/>
 
-            <TextView
+            <Button
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight=".35"
+                android:layout_weight=".4"
                 android:clickable="true"
                 android:text="@string/register_now"
                 android:textColor="@color/blue"
-				android:onClick="registerNewUser"/>
+				android:onClick="registerNewUser"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="@dimen/LIGHT_TEXT_SIZE"/>
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -161,7 +163,7 @@
                 android:id="@+id/login_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".3"
+                android:layout_weight=".4"
                 android:text="@string/login_button_text"
                 android:onClick="authenticateUserClick" />
         </TableRow>
