--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -132,17 +132,17 @@
                 android:id="@+id/button1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".195"
+                android:layout_weight=".4"
                 android:clickable="false"
                 android:longClickable="false"
                 android:visibility="invisible"/>
 
-            <Button
+            <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight=".4"
+                android:layout_weight=".3"
                 android:clickable="true"
                 android:text="@string/register_now"
                 android:textColor="@color/blue"
