--- a/Phone/main/res/layout/account_info_two.xml
+++ b/Phone/main/res/layout/account_info_two.xml
@@ -279,7 +279,7 @@
                 android:text="@string/discover_copyright_text"
                 android:textSize="@dimen/LIGHT_TEXT_SIZE" />
 
-            <Button
+            <TextView
                 android:id="@+id/account_info_two_cancel_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
